--- a/index.html
+++ b/index.html
@@ -5,20 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="E-comerce"/>
   <meta name="robots" content="index,follow"/>
+  <link rel="stylesheet" href="./styles.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&amp;display=swap" rel="stylesheet"/>
+  <title>Maxi Cusco</title>
 </head>
 <body>
   <header>
-    <h1>Food Delivery</h1>
-    <p>La Mejor Comida</p>
+    <div class="logo"><img src="./icons/logo2.png" alt="Logo Maxi Cusco"/>
+      <h1>Maxi Cusco</h1>
+    </div>
+    <div class="menu"><img src="./icons/menu.png" alt="Menú"/></div>
   </header>
   <main> 
     <section class="categorias">
-      <div class="categorias__container"> </div>
-      <div class="categorias__container"> </div>
-      <div class="categorias__container"> </div>
-      <div class="categorias__container"> </div>
+      <div class="categorias__container"></div>
     </section>
-    <section class="articulos"></section>
+    <section class="banner">hola 	  </section>
+    <section class="articulos">
+      <article class="articulos__container">
+        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
+        <div class="descripcion"> 
+          <h3>Batidora Oster</h3>
+          <h2>S/.130</h2>
+          <h3>Batidora Oster</h3>
+          <h2>S/.130</h2>
+        </div>
+      </article>
+      <article class="articulos__container">
+        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
+        <div class="descripcion"> 
+          <h3>Batidora Oster</h3>
+        </div>
+      </article>
+      <article class="articulos__container">
+        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
+        <div class="descripcion"> 
+          <h3>Batidora Oster</h3>
+          <h2>S/.130</h2>
+        </div>
+      </article>
+      <article class="articulos__container">
+        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
+        <div class="descripcion"> 
+          <h3>Batidora Oster</h3>
+          <h2>S/.130</h2>
+          <h3>Batidora Oster</h3>
+          <h2>S/.130</h2>
+          <h3>Batidora Oster</h3>
+          <h2>S/.130</h2>
+        </div>
+      </article>
+    </section>
   </main>
-  <footer> </footer>
+  <footer> <img src="./icons/facebook.png" alt=""/><img src="./icons/whatsapp.png" alt=""/><img src="./icons/apple-phone.png" alt=""/><img src="./icons/telegram-app.png" alt=""/></footer>
 </body>
