--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;500&amp;family=Roboto:wght@400;500&amp;display=swap" rel="stylesheet"/>
   <title>Maxi Cusco</title>
 </head>
 <body>
@@ -23,41 +24,57 @@
       <div class="categorias__container"></div>
     </section>
     <section class="banner">hola 	  </section>
-    <section class="articulos">
-      <article class="articulos__container">
-        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
-        <div class="descripcion"> 
-          <h3>Batidora Oster</h3>
-          <h2>S/.130</h2>
-          <h3>Batidora Oster</h3>
-          <h2>S/.130</h2>
+    <section id="articulos">
+      <article class="articulos__container"><img src="./img/tomatodo-acero.jpg" alt="Tomatodos de Acero"/>
+        <div class="detalles"> 
+          <p>Tomatodos de Acero</p>
+          <h1>s/.130.00</h1>
         </div>
       </article>
-      <article class="articulos__container">
-        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
-        <div class="descripcion"> 
-          <h3>Batidora Oster</h3>
+      <article class="articulos__container"><img src="./img/batidora-oster.jpg" alt="Batidora Oster"/>
+        <div class="detalles"> 
+          <p>Batidora Oster</p>
+          <h1>s/.130.00</h1>
         </div>
       </article>
-      <article class="articulos__container">
-        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
-        <div class="descripcion"> 
-          <h3>Batidora Oster</h3>
-          <h2>S/.130</h2>
+      <article class="articulos__container"><img src="./img/juegoollasaluminio.jpg" alt="Juego de Ollas Aluminio"/>
+        <div class="detalles"> 
+          <p>Juego de Ollas Aluminio</p>
+          <h1>s/.130.00</h1>
         </div>
       </article>
-      <article class="articulos__container">
-        <div class="articulos__img"><img src="./img/batidora-oster.jpg" alt=""/></div>
-        <div class="descripcion"> 
-          <h3>Batidora Oster</h3>
-          <h2>S/.130</h2>
-          <h3>Batidora Oster</h3>
-          <h2>S/.130</h2>
-          <h3>Batidora Oster</h3>
-          <h2>S/.130</h2>
+      <article class="articulos__container"><img src="./img/juegoollasaluminio2.jpg" alt="Juego de Ollas Aluminio con Tapa Roja"/>
+        <div class="detalles"> 
+          <p>Juego de Ollas Aluminio con Tapa Roja</p>
+          <h1>s/.130.00</h1>
+        </div>
+      </article>
+      <article class="articulos__container"><img src="./img/ollaclock.jpg" alt="Olla a Presion Clock"/>
+        <div class="detalles"> 
+          <p>Olla a Presion Clock</p>
+          <h1>s/.130.00</h1>
+        </div>
+      </article>
+      <article class="articulos__container"><img src="./img/cocina-electrica-2.jpg" alt="Cocina Electrica  Modelo Plancha"/>
+        <div class="detalles"> 
+          <p>Cocina Electrica  Modelo Plancha</p>
+          <h1>s/.130.00</h1>
+        </div>
+      </article>
+      <article class="articulos__container"><img src="./img/plancharecord.jpg" alt="Planca Record"/>
+        <div class="detalles"> 
+          <p>Planca Record</p>
+          <h1>s/.130.00</h1>
+        </div>
+      </article>
+      <article class="articulos__container"><img src="./img/cuchilla4.jpg" alt="Cuchilla Oster"/>
+        <div class="detalles"> 
+          <p>Cuchilla Oster</p>
+          <h1>s/.130.00</h1>
         </div>
       </article>
     </section>
   </main>
   <footer> <img src="./icons/facebook.png" alt=""/><img src="./icons/whatsapp.png" alt=""/><img src="./icons/apple-phone.png" alt=""/><img src="./icons/telegram-app.png" alt=""/></footer>
+  <script src="./index.js"> </script>
 </body>
