Empezando en Responsive Design

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="E-comerce">
-      <meta name="robots" content="index,follow">
-      <link rel="stylesheet" href="./styles.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&amp;display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;500&amp;family=Roboto:wght@400;500&amp;display=swap" rel="stylesheet">
+      <meta name="robots" content="index,follow">
+      <link rel="stylesheet" href="./styles.css">
+      <link rel="stylesheet" href="./tablet.css" media="screen and (min-width:420px)">
       <title>Maxi Cusco</title>
     </head>
     <body>
       <header>
         <div class="logo"><img src="./icons/logo2.png" alt="Logo Maxi Cusco">
-          <h1>Maxi Cuscoo</h1>
+          <h1>Maxi Cusco</h1>
         </div>
         <div class="menu"><img src="./icons/menu.png" alt="Menú"></div>
       </header>
@@ -28,35 +29,14 @@
             <div class="categorias__card"><a href="./electro.html"> <img src="./icons/licuadora.png" alt="Icono de Artefactos"></a>
               <p>Electro</p>
             </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/termo.png" alt="Icono de Thermos"></a>
-              <p>Termos</p>
-            </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/mochila.png" alt="Icono de Mochilas"></a>
-              <p>Mochilas</p>
-            </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/sarten.png" alt="Icono de Sartén"></a>
+            <div class="categorias__card"><a href="./cocina.html"> <img src="./icons/sarten.png" alt="Icono de Sartén"></a>
               <p>Cocina</p>
             </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/belleza.png" alt="Icono de Corte de Cabello"></a>
-              <p>Belleza</p>
-            </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/wardrobe.png" alt="Icono de Roperos"></a>
-              <p>Roperos</p>
-            </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/licuadora.png" alt="Icono de Artefactos"></a>
-              <p>Electro</p>
-            </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/termo.png" alt="Icono de Thermos"></a>
+            <div class="categorias__card"><a href="./termos.html"> <img src="./icons/termo.png" alt="Icono de Thermos"></a>
               <p>Termos</p>
             </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/mochila.png" alt="Icono de Mochilas"></a>
-              <p>Mochilas</p>
-            </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/sarten.png" alt="Icono de Sartén"></a>
-              <p>Cocina</p>
-            </div>
-            <div class="categorias__card"><a href="undefined"> <img src="./icons/belleza.png" alt="Icono de Corte de Cabello"></a>
-              <p>Belleza</p>
+            <div class="categorias__card"><a href="./belleza.html"> <img src="./icons/belleza.png" alt="Icono de Corte de Cabello"></a>
+              <p>Otros</p>
             </div>
       </section>
       <body>
@@ -65,65 +45,91 @@
             <div class="banner__container"></div>
           </section>
           <section id="articulos">
-                <article class="articulos__container"><img src="./img/small/ROP-MADERA-3-CUERPOS.jpg" alt="Tomatodos de Acero">
+                <article class="articulos__container"><img src="./img/small/Rop-Tubos-2-Cuerpos.jpg" alt="Ropero 2 Cuerpos">
                   <div class="detalles"> 
-                    <p>Tomatodos de Acero</p>
-                    <h1>s/.130.00</h1>
+                    <p>Ropero 2 Cuerpos</p>
+                    <h1>S/.79.00</h1>
                   </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Ropero%202%20Cuerpos%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/Rop-3C-Madera-MAS-PARRILLAS.jpg" alt="Batidora Oster">
+                <article class="articulos__container"><img src="./img/small/Rop-3C-Madera-MAS-PARRILLAS.jpg" alt="Ropero Madera con Zapatera">
                   <div class="detalles"> 
-                    <p>Batidora Oster</p>
-                    <h1>s/.130.00</h1>
+                    <p>Ropero Madera con Zapatera</p>
+                    <h1>Delivery GRATIS!</h1>
                   </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Ropero%20Madera%20con%20Zapatera%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/Ropero-Esquinero-EST.jpg" alt="Juego de Ollas Aluminio">
+                <article class="articulos__container"><img src="./img/small/Ropero-Esquinero-EST.jpg" alt="Ropero Esquinero">
                   <div class="detalles"> 
-                    <p>Juego de Ollas Aluminio</p>
-                    <h1>s/.130.00</h1>
+                    <p>Ropero Esquinero</p>
+                    <h1>S/.89.00</h1>
                   </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Ropero%20Esquinero%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/Ropero-tubos-3-cuerpos.jpg" alt="Juego de Ollas Aluminio con Tapa Roja">
+                <article class="articulos__container"><img src="./img/small/Ropero-tubos-3-cuerpos.jpg" alt="Ropero 2 Colgadores Metal">
                   <div class="detalles"> 
-                    <p>Juego de Ollas Aluminio con Tapa Roja</p>
-                    <h1>s/.130.00</h1>
+                    <p>Ropero 2 Colgadores Metal</p>
+                    <h1>Delivery GRATIS!</h1>
                   </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Ropero%202%20Colgadores%20Metal%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/Ropero-Mediano-3-Cuerpos.jpg" alt="Olla a Presion Clock">
+                <article class="articulos__container"><img src="./img/small/Ropero-Mediano-3-Cuerpos.jpg" alt="Ropero 3 Cuerpos Mediano">
                   <div class="detalles"> 
-                    <p>Olla a Presion Clock</p>
-                    <h1>s/.130.00</h1>
+                    <p>Ropero 3 Cuerpos Mediano</p>
+                    <h1>Delivery GRATIS!</h1>
                   </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Ropero%203%20Cuerpos%20Mediano%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/Rop-4-colgadores.jpg" alt="Cocina Electrica  Modelo Plancha">
+                <article class="articulos__container"><img src="./img/small/Rop-4-colgadores.jpg" alt="Ropero Armable 4 Colgadores">
                   <div class="detalles"> 
-                    <p>Cocina Electrica  Modelo Plancha</p>
-                    <h1>s/.130.00</h1>
+                    <p>Ropero Armable 4 Colgadores</p>
+                    <h1>S/.99.00</h1>
                   </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Ropero%204%20Colgadores%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/Rop-Tubos-2-Cuerpos.jpg" alt="Planca Record">
+                <article class="articulos__container"><img src="./img/small/Zapateras.jpg" alt="Zapatera 9,7 y 5 Niveles">
                   <div class="detalles"> 
-                    <p>Planca Record</p>
-                    <h1>s/.130.00</h1>
+                    <p>Zapatera 9,7 y 5 Niveles</p>
+                    <h1>Delivery GRATIS!</h1>
                   </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Zapateras%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/Zapateras.jpg" alt="Cocina Electrica  Modelo Plancha">
+                <article class="articulos__container"><img src="./img/small/ROP-MADERA-3-CUERPOS.jpg" alt="Ropero Madera 3 Cuerpos">
                   <div class="detalles"> 
-                    <p>Cocina Electrica  Modelo Plancha</p>
-                    <h1>s/.130.00</h1>
+                    <p>Ropero Madera 3 Cuerpos</p>
+                    <h1>Delivery GRATIS!</h1>
                   </div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/Estante-de-Bannio-blanco.jpg" alt="Planca Record">
-                  <div class="detalles"> 
-                    <p>Planca Record</p>
-                    <h1>s/.130.00</h1>
-                  </div>
+                  <div class="calltoaction"><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20%22Ropero%20Madera%203%20Cuerpos%22,%20necesito%20m%C3%A1s%20detalles.">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
                 </article>
           </section>
         </main>
       </body>
     </body>
-    <footer> <img src="./icons/facebook.png" alt=""><img src="./icons/whatsapp.png" alt=""><img src="./icons/apple-phone.png" alt=""><img src="./icons/telegram-app.png" alt=""></footer>
+    <footer> <a href="https://facebook.com/profile.php?id=100063607927172"><img src="./icons/facebook.png" alt="Icono de Facebook"></a><a href="https://api.whatsapp.com/send/?phone=51993862663&amp;text=Hola%20estoy%20interesado%20en%20uno%20de%20los%20productos%20de%20su%20cat%C3%A1logo."><img src="./icons/whatsapp.png" alt="Icono de Whatsapp"></a><a href="tel:993862663"><img src="./icons/apple-phone.png" alt="Icono Llamada Télefonica"></a><a href="#"><img src="./icons/telegram-app.png" alt="Icono de Telegram"></a></footer>
     <script src="./index.js"></script>
   </html>
 </html>
