--- a/cocina.html
+++ b/cocina.html
@@ -42,9 +42,9 @@
       <body>
         <main> 
           <section id="articulos">
-                <article class="articulos__container"><img src="./img/small/Extractor-Oster-600W.jpg" alt="Extractor Oster 600 watts">
+                <article class="articulos__container"><img src="./img/small/Brunido-Grande-x4.jpg" alt="Juego de Ollas Aluminio">
                   <div class="detalles"> 
-                    <p>Extractor Oster 600 watts</p>
+                    <p>Juego de Ollas Aluminio</p>
                     <h1>20% de Descuento</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
@@ -52,9 +52,69 @@
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-3V-700W.jpg" alt="Batidora Oster Clasica 700 watts">
+                <article class="articulos__container"><img src="./img/small/Acero-Vidrio-X5.jpg" alt="Juego de Ollas Acero">
                   <div class="detalles"> 
-                    <p>Batidora Oster Clasica 700 watts</p>
+                    <p>Juego de Ollas Acero</p>
+                    <h1>s/.230.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/Acero-Solido-X5.jpg" alt="Juego de Ollas Acero Tapa de Vidrio">
+                  <div class="detalles"> 
+                    <p>Juego de Ollas Acero Tapa de Vidrio</p>
+                    <h1>s/.160.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/ollaclock.jpg" alt="Olla A Presión Clock">
+                  <div class="detalles"> 
+                    <p>Olla A Presión Clock</p>
+                    <h1>s/.165.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/tetera-euro-reloj.jpg" alt="Tetera Acero Quirúrgico 3 Litros">
+                  <div class="detalles"> 
+                    <p>Tetera Acero Quirúrgico 3 Litros</p>
+                    <h1>s/.110.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/Tetera-Record-Anodizado.jpg" alt="Tetera Record Anodizado">
+                  <div class="detalles"> 
+                    <p>Tetera Record Anodizado</p>
+                    <h1>s/.120.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/Tetera-Teflon.jpg" alt="Tetera Anti-Sarro">
+                  <div class="detalles"> 
+                    <p>Tetera Anti-Sarro</p>
+                    <h1>s/.65.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/olla-universal.jpg" alt="Olla A Presión Universal">
+                  <div class="detalles"> 
+                    <p>Olla A Presión Universal</p>
                     <h1>Delivery GRATIS!</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
@@ -62,9 +122,9 @@
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-jhumy.jpg" alt="Licuadora Industrial Jhumy">
+                <article class="articulos__container"><img src="./img/small/Olla-Presion-Record.jpg" alt="Olla A Presión Record">
                   <div class="detalles"> 
-                    <p>Licuadora Industrial Jhumy</p>
+                    <p>Olla A Presión Record</p>
                     <h1>Delivery GRATIS!</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
@@ -72,9 +132,19 @@
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-boton-Rojo.jpg" alt="Licuadora Oster Pica Hielo">
+                <article class="articulos__container"><img src="./img/small/sarten-facusa.jpg" alt="Sartén Antiadherente Facusa">
                   <div class="detalles"> 
-                    <p>Licuadora Oster Pica Hielo</p>
+                    <p>Sartén Antiadherente Facusa</p>
+                    <h1>s/.25.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/olla-lijado-x7.jpg" alt="Juego de Ollas Aluminio Recta">
+                  <div class="detalles"> 
+                    <p>Juego de Ollas Aluminio Recta</p>
                     <h1>Delivery GRATIS!</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
@@ -82,40 +152,10 @@
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/hervidor-scarlett-2.jpg" alt="Hervidor de Acero 2 Litros">
+                <article class="articulos__container"><img src="./img/small/Juego-alumino-bombi.jpg" alt="Juego de Ollas Aluminio Bombi">
                   <div class="detalles"> 
-                    <p>Hervidor de Acero 2 Litros</p>
-                    <h1>s/.30.00</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-PRO-700W.jpg" alt="Licuadora Oster Pro 700 watts">
-                  <div class="detalles"> 
-                    <p>Licuadora Oster Pro 700 watts</p>
+                    <p>Juego de Ollas Aluminio Bombi</p>
                     <h1>Delivery GRATIS!</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/20210927_123454.jpg" alt="Extractor Oster">
-                  <div class="detalles"> 
-                    <p>Extractor Oster</p>
-                    <h1>s/.219.00</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/Plancha-Oster-5954-vertical.jpg" alt="Planca Oster a Vapor">
-                  <div class="detalles"> 
-                    <p>Planca Oster a Vapor</p>
-                    <h1>s/.69</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
