--- a/mochilas.html
+++ b/mochilas.html
@@ -42,80 +42,40 @@
       <body>
         <main> 
           <section id="articulos">
-                <article class="articulos__container"><img src="./img/small/Extractor-Oster-600W.jpg" alt="Extractor Oster 600 watts">
+                <article class="articulos__container"><img src="./img/small/Extractor-Oster-600W.jpg" alt="Tomatodos de Acero">
                   <div class="detalles"> 
-                    <p>Extractor Oster 600 watts</p>
-                    <h1>20% de Descuento</h1>
+                    <p>Tomatodos de Acero</p>
+                    <h1>s/.130.00</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-3V-700W.jpg" alt="Batidora Oster Clasica 700 watts">
+                <article class="articulos__container"><img src="./img/small/licuadora-Oster-3V-700W.jpg" alt="Batidora Oster">
                   <div class="detalles"> 
-                    <p>Batidora Oster Clasica 700 watts</p>
-                    <h1>Delivery GRATIS!</h1>
+                    <p>Batidora Oster</p>
+                    <h1>s/.130.00</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-jhumy.jpg" alt="Licuadora Industrial Jhumy">
+                <article class="articulos__container"><img src="./img/small/licuadora-jhumy.jpg" alt="Juego de Ollas Aluminio">
                   <div class="detalles"> 
-                    <p>Licuadora Industrial Jhumy</p>
-                    <h1>Delivery GRATIS!</h1>
+                    <p>Juego de Ollas Aluminio</p>
+                    <h1>s/.130.00</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-boton-Rojo.jpg" alt="Licuadora Oster Pica Hielo">
+                <article class="articulos__container"><img src="./img/small/licuadora-Oster-boton-Rojo.jpg" alt="Juego de Ollas Aluminio con Tapa Roja">
                   <div class="detalles"> 
-                    <p>Licuadora Oster Pica Hielo</p>
-                    <h1>Delivery GRATIS!</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/hervidor-scarlett-2.jpg" alt="Hervidor de Acero 2 Litros">
-                  <div class="detalles"> 
-                    <p>Hervidor de Acero 2 Litros</p>
-                    <h1>s/.30.00</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-PRO-700W.jpg" alt="Licuadora Oster Pro 700 watts">
-                  <div class="detalles"> 
-                    <p>Licuadora Oster Pro 700 watts</p>
-                    <h1>Delivery GRATIS!</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/20210927_123454.jpg" alt="Extractor Oster">
-                  <div class="detalles"> 
-                    <p>Extractor Oster</p>
-                    <h1>s/.219.00</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/Plancha-Oster-5954-vertical.jpg" alt="Planca Oster a Vapor">
-                  <div class="detalles"> 
-                    <p>Planca Oster a Vapor</p>
-                    <h1>s/.69</h1>
+                    <p>Juego de Ollas Aluminio con Tapa Roja</p>
+                    <h1>s/.130.00</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
