--- a/termos.html
+++ b/termos.html
@@ -42,19 +42,29 @@
       <body>
         <main> 
           <section id="articulos">
-                <article class="articulos__container"><img src="./img/small/Extractor-Oster-600W.jpg" alt="Extractor Oster 600 watts">
+                <article class="articulos__container"><img src="./img/small/Termo-BIGBOY.jpg" alt="Termo 2 Litros 24 Horas">
                   <div class="detalles"> 
-                    <p>Extractor Oster 600 watts</p>
-                    <h1>20% de Descuento</h1>
+                    <p>Termo 2 Litros 24 Horas</p>
+                    <h1>S/.39.00</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-3V-700W.jpg" alt="Batidora Oster Clasica 700 watts">
+                <article class="articulos__container"><img src="./img/small/termobubba.jpg" alt="Termo Acero Quirúrgico Bubba">
                   <div class="detalles"> 
-                    <p>Batidora Oster Clasica 700 watts</p>
+                    <p>Termo Acero Quirúrgico Bubba</p>
+                    <h1>49.00</h1>
+                  </div>
+                  <div class="calltoaction"><a href="undefined">
+                      <div class="wsp">
+                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
+                      </div></a></div>
+                </article>
+                <article class="articulos__container"><img src="./img/small/Taper-Electrico.jpg" alt="Taper Eléctrico">
+                  <div class="detalles"> 
+                    <p>Taper Eléctrico</p>
                     <h1>Delivery GRATIS!</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
@@ -62,60 +72,20 @@
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-jhumy.jpg" alt="Licuadora Industrial Jhumy">
+                <article class="articulos__container"><img src="./img/small/termo-acero.jpg" alt="Termos Acero Inóxidable">
                   <div class="detalles"> 
-                    <p>Licuadora Industrial Jhumy</p>
-                    <h1>Delivery GRATIS!</h1>
+                    <p>Termos Acero Inóxidable</p>
+                    <h1>S/.19.00</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
                         <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
                       </div></a></div>
                 </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-boton-Rojo.jpg" alt="Licuadora Oster Pica Hielo">
+                <article class="articulos__container"><img src="./img/small/termo-acero2.jpg" alt="Termo Acero Inóxidable 1 Litro">
                   <div class="detalles"> 
-                    <p>Licuadora Oster Pica Hielo</p>
-                    <h1>Delivery GRATIS!</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/hervidor-scarlett-2.jpg" alt="Hervidor de Acero 2 Litros">
-                  <div class="detalles"> 
-                    <p>Hervidor de Acero 2 Litros</p>
-                    <h1>s/.30.00</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/licuadora-Oster-PRO-700W.jpg" alt="Licuadora Oster Pro 700 watts">
-                  <div class="detalles"> 
-                    <p>Licuadora Oster Pro 700 watts</p>
-                    <h1>Delivery GRATIS!</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/20210927_123454.jpg" alt="Extractor Oster">
-                  <div class="detalles"> 
-                    <p>Extractor Oster</p>
-                    <h1>s/.219.00</h1>
-                  </div>
-                  <div class="calltoaction"><a href="undefined">
-                      <div class="wsp">
-                        <p>Contactar </p><img src="./icons/whatsapp3.png" alt="icono de whatsapp">
-                      </div></a></div>
-                </article>
-                <article class="articulos__container"><img src="./img/small/Plancha-Oster-5954-vertical.jpg" alt="Planca Oster a Vapor">
-                  <div class="detalles"> 
-                    <p>Planca Oster a Vapor</p>
-                    <h1>s/.69</h1>
+                    <p>Termo Acero Inóxidable 1 Litro</p>
+                    <h1>S/.29.00</h1>
                   </div>
                   <div class="calltoaction"><a href="undefined">
                       <div class="wsp">
